--- a/css/miestilos.css
+++ b/css/miestilos.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: hsl(352, 84%, 88%);
+    background-color: rgb(241, 212, 230);
 }
 
 a {
@@ -35,5 +35,34 @@ span {
     padding-bottom: 20px;
     border-width: 5px;
     width: 25;
-    
+
+}
+
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content {
+    flex: 1;
+    padding: 20px;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
